--- a/views/addbooks.ejs
+++ b/views/addbooks.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registeration Page - Book Emporium</title>
+    <link rel="icon" href="/images/logo.jpg" type="image/jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -115,7 +116,8 @@
                     <div class="card bg-white blur-bg-overlay shadow-bg">
                         <div class="card-body  p-4 p-md-5">
                             <h3 class="mb-2 pb-2 pb-md-0 mb-md-5 text-center">Add Book</h3>
-                            <form action="/add/book" method="post">
+                            <!-- enctype is used to sending the file but it is not necessary for text data as well-->
+                            <form action="/add/book" method="post" enctype="multipart/form-data">
                                 <!-- Book Title and Author -->
                                 <div class="row">
                                     <div class="col-md-6 mb-4">
@@ -195,7 +197,7 @@
                                 </div>
 
                                 <!-- Price Per Unit -->
-                                <div class="row justify-content-center">
+                                <div class="row">
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
                                             <label for="pricePerUnit"
@@ -205,38 +207,42 @@
                                                 name="pricePerUnit" required>
                                         </div>
                                     </div>
-                                </div>
 
-
-
-                                <!-- 
-                                <div class="row">
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
-                                            <label for="pricePerUnit" class="form-label text-bold text-black">Price Per Unit</label>
+                                            <label for="bookImage" class="form-label text-bold text-black"></label>
                                             <input type="file" class="form-control form-control-lg" id="file"
-                                                name="file" required>
+                                                name="bookImage" required>
                                         </div>
                                     </div>
-                                </div> -->
-
-                                <!-- Submit Button -->
-                                <div class="pt-2 d-flex justify-content-center">
-                                    <button type="submit" class="btn btn-primary btn-lg">Add Book</button>
                                 </div>
-
-                                <!-- Error Message Display -->
-                                <div id="error-message" class="text-danger mb-3">
-                                    <% if (typeof error !=='undefined' ) { %>
-                                        <%= error %>
-                                            <% } %>
+                                <div class="col-md-6 mb-4">
+                                    <div class="form-outline">
+                                        <label for="authorImage" class="form-label text-bold text-black">Select Author
+                                            Image</label>
+                                        <input type="file" class="form-control form-control-lg" id="file"
+                                            name="authorImage" required>
+                                    </div>
                                 </div>
-                            </form>
-
                         </div>
+
+                        <!-- Submit Button -->
+                        <div class="pt-2 d-flex justify-content-center">
+                            <button type="submit" class="btn btn-primary btn-lg">Add Book</button>
+                        </div>
+
+                        <!-- Error Message Display -->
+                        <div id="error-message" class="text-danger mb-3">
+                            <% if (typeof error !=='undefined' ) { %>
+                                <%= error %>
+                                    <% } %>
+                        </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
