--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Dashboard - Book Emporium</title>
+    <link rel="icon" href="/images/logo.jpg" type="image/jpg">
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link
