--- a/views/adminpanel.ejs
+++ b/views/adminpanel.ejs
@@ -29,11 +29,10 @@
             background-color: #FFF9D0;
         }
 
-        /* .sidebar {
-      background-color: #A0DEFF;
-
-      /* background: linear-gradient(to , #ee7724, aliceblue, #ee7724, #d8363a, #dd3675, #b44593); */
-        /* } */
+        .sidebar {
+            background-color: #A0DEFF;
+            /* background: linear-gradient(to , #ee7724, aliceblue, #ee7724, #d8363a, #dd3675, #b44593); */
+        }
 
         .header {
             background-color: #CAF4FF;
