--- a/views/addnewuser.ejs
+++ b/views/addnewuser.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo.jpg" type="image/jpg">
-    <title>Updation - Book Emporium</title>
+    <title>Registeration - Book Emporium</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -15,7 +15,7 @@
             padding: 0;
             /* background: linear-gradient(90deg, #2B7BE3 0%, #EF2BA8 100%); */
             /* background: linear-gradient(to bottom, #FF69B4 25%, #FFC67D 25%, #F7DC6F 24%); */
-            background: linear-gradient(to left, #4FC3F7, #64B5F6, #90CAF9);
+            background: linear-gradient(to left, #5AB2FF, #87CEFA, #ADD8E6);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -87,9 +87,7 @@
 
         .form-container {
             padding: 20px;
-            /* Adjust padding as needed */
             margin: 0;
-            /* Remove extra space */
         }
 
         /* Optional: Add media query for responsive design */
@@ -106,76 +104,82 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card form-container h-auto p-4 p-md-5 mb-auto bg-light-subtle blur-bg-overlay shadow-bg">
-                    <h4 class="mb-2 pb-2 pb-md-0 mb-md-5 text-center">Update User Details</h4>
-                    <form action="/update/user/<%= user._id %>" method="post">
+                    <h4 class="mb-2 pb-2 pb-md-0 mb-md-5 text-center">Add New User</h4>
+                    <form action="/add/new/user" method="post">
                         <div class="row">
                             <div class="col-md-6 mb-4">
                                 <div data-mdb-input-init class="form-outline">
                                     <input type="text" id="firstName" name="firstName"
-                                        class="form-control form-control-lg" value="<%= user.firstName %>" />
+                                        class="form-control form-control-lg" />
                                     <label class="form-label" for="firstName">First Name</label>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div data-mdb-input-init class="form-outline">
                                     <input type="text" id="lastName" name="lastName"
-                                        class="form-control form-control-lg" value="<%= user.lastName %>" />
+                                        class="form-control form-control-lg" />
                                     <label class="form-label" for="lastName">Last Name</label>
                                 </div>
                             </div>
                         </div>
+
                         <div class="row">
                             <div class="col mb-4 d-flex align-items-center">
                                 <div data-mdb-input-init class="form-outline datepicker w-100">
-                                    <input type="text" class="form-control form-control-lg" id="country" name="country"
-                                        value="<%= user.country %>" />
+                                    <input type="text" class="form-control form-control-lg" id="country"
+                                        name="country" />
                                     <label for="country" class="form-label">Country</label>
                                 </div>
                             </div>
                         </div>
+
                         <div class="row">
                             <div class="col-md-6 mb-4 pb-2">
                                 <div data-mdb-input-init class="form-outline">
-                                    <input type="email" id="email" name="email" class="form-control form-control-lg"
-                                        value="<%= user.email %>" />
+                                    <input type="email" id="email" name="email" class="form-control form-control-lg" />
                                     <label class="form-label" for="email">Email</label>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4 pb-2">
                                 <div data-mdb-input-init class="form-outline">
                                     <input type="tel" id="phoneNumber" name="mobileNo"
-                                        class="form-control form-control-lg" value="<%= user.mobileNo %>" />
+                                        class="form-control form-control-lg" />
                                     <label class="form-label" for="phoneNumber">Phone Number</label>
                                 </div>
                             </div>
                         </div>
+
                         <div class="row">
                             <div class="col-md-6 mb-4">
                                 <div data-mdb-input-init class="form-outline">
                                     <input type="password" id="password" name="password"
-                                        class="form-control form-control-lg" value="<%= user.password %>" />
+                                        class="form-control form-control-lg" />
                                     <label class="form-label" for="password">Password</label>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div data-mdb-input-init class="form-outline">
-                                    <input type="password" id="confirmPassword" name="confirmPassword"
-                                        class="form-control form-control-lg" />
-                                    <label class="form-label" for="confirmPassword">Confirm Password</label>
+                                    <input type="password" id="" name="" class="form-control form-control-lg" />
+                                    <label class="form-label" for="">Confirm Password</label>
                                 </div>
                             </div>
                         </div>
+
                         <div class="pt-2 d-flex justify-content-center gap-3">
-                            <button type="submit" value="update book" class="btn btn-success btn-lg"><strong>Update
-                                    Details</strong></button>
+                            <button type="submit" value="update book" class="btn btn-success btn-lg"><strong>Add User
+                                </strong></button>
                             <a href="#" class="btn btn-danger btn-lg"
                                 onclick="location.reload(); return false;">Cancel</a>
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
     </div>
+    </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
